--- a/hugo/themes/hugo-bearblog-local/layouts/partials/header.html
+++ b/hugo/themes/hugo-bearblog-local/layouts/partials/header.html
@@ -1,4 +1,5 @@
-<a href="{{ "" | relURL }}" class="title">
-  <h2>{{ .Site.Title }}</h2>
+<a href="{{ "blog" | relURL }}" class="title">
+  <!-- <h2>{{ .Site.Title }}</h2> -->
+  <h2>博客</h2>
 </a>
 <nav>{{- partial "nav.html" . -}}</nav>
