--- a/hugo/themes/hugo-bearblog-local/layouts/partials/nav.html
+++ b/hugo/themes/hugo-bearblog-local/layouts/partials/nav.html
@@ -1,7 +1,7 @@
-<a href="{{ "" | relURL }}">首页</a>
 {{ range .Site.Menus.main }}
 <a href="{{ .URL }}">{{ .Name }}</a>
 {{ end }}
 {{ with .Site.GetPage "/blog" }}
-<a href="{{ "blog" | relURL }}">博客目录</a>
+<a href="{{ "blog" | relURL }}">索引</a>
+<a href="https://zjh.asia">学术主页</a>
 {{ end }}
