--- a/hugo/themes/hugo-bearblog-local/layouts/partials/nav.html
+++ b/hugo/themes/hugo-bearblog-local/layouts/partials/nav.html
@@ -3,5 +3,5 @@
 {{ end }}
 {{ with .Site.GetPage "/blog" }}
 <a href="{{ "blog" | relURL }}">索引</a>
-<a href="https://zjh.asia">学术主页</a>
+<a href="{{ "subscribe" | relURL }}">订阅和联系</a>
 {{ end }}
