--- a/hugo/themes/hugo-bearblog-local/layouts/_default/list.html
+++ b/hugo/themes/hugo-bearblog-local/layouts/_default/list.html
@@ -24,7 +24,7 @@
     </li>
     {{ end }}
   </ul>
-  {{ if .Data.Singular }}
+  <!-- {{ if .Data.Singular }}
   {{else}}
     <small>
       <div>
@@ -33,6 +33,6 @@
         {{ end }}
       </div>
     </small>
-    {{ end }}
+    {{ end }} -->
 </content>
 {{ end }}
