--- a/hugo/themes/hugo-bearblog-local/layouts/partials/footer.html
+++ b/hugo/themes/hugo-bearblog-local/layouts/partials/footer.html
@@ -1,14 +1,10 @@
 {{ if ne .Site.Params.hideMadeWithLine true }} 
 <span style="font-size: smaller;">
     Powered By <a href="https://github.com/janraasch/hugo-bearblog/">Bear</a>, <a href="https://www.gohugo.org/">Hugo</a> <br> 
-</span>
-<span style="font-size: smaller;">
+</span><span style="font-size: smaller;">
+    Copyright © 2023, 张景赫     
     <a href="https://beian.miit.gov.cn/" target="_blank">
         冀ICP备2023030802号
     </a>
-</span>
-<br>
-<span style="font-size: smaller;">
-    Copyright © 2023, 张景赫
 </span>
 {{ end }}
