--- a/hugo/themes/hugo-bearblog-local/layouts/partials/style.html
+++ b/hugo/themes/hugo-bearblog-local/layouts/partials/style.html
@@ -94,8 +94,8 @@
   }
 
   footer {
-    padding: 25px;
-    text-align: center;
+    /* padding-top: 25px; */
+    text-align: left;
   }
 
   .helptext {
