--- a/vitepress/docs/public/output.css
+++ b/vitepress/docs/public/output.css
@@ -546,18 +546,6 @@ video {
   margin-left: 15px;
 }
 
-.mt-20 {
-  margin-top: 5rem;
-}
-
-.mt-\[20px\] {
-  margin-top: 20px;
-}
-
-.mt-\[40px\] {
-  margin-top: 40px;
-}
-
 .mt-\[30px\] {
   margin-top: 30px;
 }
@@ -609,6 +597,18 @@ video {
   width: 100%;
 }
 
+.w-\[1200px\] {
+  width: 1200px;
+}
+
+.w-\[1080px\] {
+  width: 1080px;
+}
+
+.w-\[1000px\] {
+  width: 1000px;
+}
+
 .border {
   border-width: 1px;
 }
@@ -629,10 +629,6 @@ video {
 
 .pt-2 {
   padding-top: 0.5rem;
-}
-
-.text-center {
-  text-align: center;
 }
 
 .text-3xl {
@@ -869,10 +865,6 @@ video {
 }
 
 @media (max-width: 900px) {
-  .sm\:block {
-    display: block;
-  }
-
   .sm\:h-\[28px\] {
     height: 28px;
   }
@@ -896,5 +888,23 @@ video {
   .sm\:text-base {
     font-size: 1rem;
     line-height: 1.5rem;
+  }
+}
+
+@media (min-width: 900px) and (max-width: 1200px) {
+  .md\:w-\[70\%\] {
+    width: 70%;
+  }
+}
+
+@media (min-width: 1200px) and (max-width: 1279px) {
+  .lg\:w-\[1080px\] {
+    width: 1080px;
+  }
+}
+
+@media (min-width: 1280px) and (max-width: 1600px) {
+  .xl\:w-\[1080px\] {
+    width: 1080px;
   }
 }
