--- a/main/input.css
+++ b/main/input.css
@@ -2,6 +2,15 @@
 @tailwind components;
 @tailwind utilities;
 
+#card_bg{
+    @apply bg-[#fff] w-[428px] sm:w-[90%] h-[270px] sm:h-fit mt-[10%] m-auto rounded-lg shadow-md border-gray-100 border-[1px];
+}
+@media screen and (min-width: 1000px) {
+    #card_bg{
+        @apply hover:scale-[1.02] hover:shadow-2xl ease-in-out duration-1000
+  }
+}
+
 .follow_svg{
     @apply  text-gray-300 hover:text-gray-700 dark:text-white mr-2
 }
