--- a/hugo/themes/hugo-bearblog-local/layouts/partials/style.html
+++ b/hugo/themes/hugo-bearblog-local/layouts/partials/style.html
@@ -97,7 +97,7 @@
   footer {
     /* padding-top: 25px; */
     text-align: left;
-    /* padding-bottom: 128px; */
+    padding-bottom: 128px;
   }
 
   .helptext {
