--- a/hugo/themes/hugo-bearblog-local/layouts/partials/favicon.html
+++ b/hugo/themes/hugo-bearblog-local/layouts/partials/favicon.html
@@ -1,2 +1,3 @@
 {{ with .Site.Params.favicon }}
 <link rel="shortcut icon" href="{{ . | absURL }}" />{{ end }}
+<link rel="icon" href="https://mysite-bucket.oss-cn-wulanchabu.aliyuncs.com/avator/zjh_roundfull.png?x-oss-process=style/small_size_rule">
