--- a/hugo/themes/hugo-bearblog-local/layouts/partials/nav.html
+++ b/hugo/themes/hugo-bearblog-local/layouts/partials/nav.html
@@ -4,4 +4,6 @@
 {{ with .Site.GetPage "/blog" }}
 <a href="{{ "blog" | relURL }}">索引</a>
 <a href="{{ "subscribe" | relURL }}">订阅更新</a>
+<a href="https://zjh.asia/read/" target="_blank">读书记录&nbsp;&nbsp;<svg style="width: 15px; margin-left: -13px; margin-bottom: -2px;" xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill="none" ><path d='M0 0h24v24H0V0z' /><path fill='currentColor'  d='M9 5v2h6.59L4 18.59 5.41 20 17 8.41V15h2V5H9z' /></svg></a>
+<a href="https://zjh.asia/read/" target="_blank" style="margin-left: -2px;">游戏记录&nbsp;&nbsp;<svg style="width: 15px; margin-left: -13px; margin-bottom: -2px;" xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill="none" ><path d='M0 0h24v24H0V0z' /><path fill='currentColor'  d='M9 5v2h6.59L4 18.59 5.41 20 17 8.41V15h2V5H9z' /></svg></a>
 {{ end }}
