--- a/main/input.css
+++ b/main/input.css
@@ -12,7 +12,7 @@
 }
 
 .follow_svg{
-    @apply  text-white hover:text-gray-200 dark:text-white mr-2
+    @apply  text-black hover:text-gray-200 mr-2
 }
 .follow_svg_n1{
     @apply  w-[27px] h-[25px] ml-[0px] mt-[2px] follow_svg
