--- a/vitepress/docs/.vitepress/theme/output_vitepress.css
+++ b/vitepress/docs/.vitepress/theme/output_vitepress.css
@@ -557,15 +557,12 @@ video {
   -webkit-line-clamp: 1;
 }
 
-.line-clamp-none {
-  overflow: visible;
-  display: block;
-  -webkit-box-orient: horizontal;
-  -webkit-line-clamp: none;
-}
-
 .block {
   display: block;
+}
+
+.inline {
+  display: inline;
 }
 
 .table {
@@ -586,6 +583,26 @@ video {
 
 .h-auto {
   height: auto;
+}
+
+.h-2 {
+  height: 0.5rem;
+}
+
+.h-\[1px\] {
+  height: 1px;
+}
+
+.h-\[0px\] {
+  height: 0px;
+}
+
+.h-\[2px\] {
+  height: 2px;
+}
+
+.h-\[10px\] {
+  height: 10px;
 }
 
 .w-\[1000px\] {
@@ -626,21 +643,18 @@ video {
   background-repeat: repeat;
 }
 
-.pt-0 {
-  padding-top: 0px;
-}
-
 .pt-2 {
   padding-top: 0.5rem;
-}
-
-.pt-\[10px\] {
-  padding-top: 10px;
 }
 
 .text-3xl {
   font-size: 1.875rem;
   line-height: 2.25rem;
+}
+
+.text-sm {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
 }
 
 .font-bold {
@@ -886,6 +900,14 @@ video {
 }
 
 @media (max-width: 900px) {
+  .sm\:ml-1 {
+    margin-left: 0.25rem;
+  }
+
+  .sm\:block {
+    display: block;
+  }
+
   .sm\:h-\[28px\] {
     height: 28px;
   }
@@ -909,5 +931,10 @@ video {
   .sm\:text-base {
     font-size: 1rem;
     line-height: 1.5rem;
+  }
+
+  .sm\:text-xs {
+    font-size: 0.75rem;
+    line-height: 1rem;
   }
 }
