--- a/hugo/themes/hugo-bearblog-local/layouts/_default/single.html
+++ b/hugo/themes/hugo-bearblog-local/layouts/_default/single.html
@@ -2,11 +2,11 @@
 {{ if eq .Type "blog" }}{{ if not .Params.menu }}
 <h1>{{ .Title }}</h1>
 <p>
-  <i>
+  <strong>
     <time datetime='{{ .Date.Format "2006-01-02" }}' pubdate>
-      {{ .Date.Format (default "02 Jan, 2006" .Site.Params.dateFormat) }}
+      {{ .Date.Format (default "2006年1月2日" .Site.Params.dateFormat) }}
     </time>
-  </i>
+  </strong>
 </p>
 {{ end }}{{ end }}
 <content>
