--- a/hugo/themes/hugo-bearblog-local/layouts/partials/footer.html
+++ b/hugo/themes/hugo-bearblog-local/layouts/partials/footer.html
@@ -2,9 +2,12 @@
 <span style="font-size: smaller;">
     Powered By <a href="https://github.com/janraasch/hugo-bearblog/">Bear</a>, <a href="https://www.gohugo.org/">Hugo</a>
 </span>
-<span style="font-size: smaller;">
-    Copyright © 2023, 张景赫<br>
+<span style="font-size: smaller; ">
+    <br>
+    Copyright © 2023, 张景赫
     <a href="https://beian.miit.gov.cn/" style="text-decoration: none;color: #888;">冀ICP备2023030802号</a> 
-    <img src="https://mysite-bucket.oss-cn-wulanchabu.aliyuncs.com/other_icon/%E5%A4%87%E6%A1%88%E5%9B%BE%E6%A0%87.png" style="display: inline; height: 15px; margin-right: -5px; margin-bottom: -2px;" alt="">&nbsp;<a target="_blank" href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=13010202003482" style="text-decoration: none;color: #888;">冀公网安备13010202003482号</a>
+    <br><br>
+    <img src="https://mysite-bucket.oss-cn-wulanchabu.aliyuncs.com/other_icon/%E5%A4%87%E6%A1%88%E5%9B%BE%E6%A0%87.png" style="display: inline; height: 15px; margin-right: -5px; margin-bottom: -2px;" alt="">&nbsp;<a target="_blank" href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=13010202003482" style="text-decoration: none;color: #888;">
+        冀公网安备13010202003482号</a>
 </span>
 {{ end }}
