--- a/hugo/themes/hugo-bearblog-local/layouts/partials/style.html
+++ b/hugo/themes/hugo-bearblog-local/layouts/partials/style.html
@@ -95,9 +95,9 @@
   }
 
   footer {
-    /* padding-top: 25px; */
+    padding-top: 28px;
     text-align: left;
-    padding-bottom: 128px;
+    padding-bottom: 28px;
   }
 
   .helptext {
