--- a/main/input.css
+++ b/main/input.css
@@ -15,7 +15,7 @@
     @apply p-2 text-base leading-6 italic sm:not-italic;
 }
 .para-bottom{
-    @apply p-1 pl-2 italic sm:not-italic text-sm;
+    @apply p-1 pl-2 text-sm;
 }
 .title{
     @apply pt-[150px] sm:pt-[100px] font-bold text-5xl p-2 sm:p-1 pb-10 sm:pb-10 tracking-wide
