--- a/main/output_main.css
+++ b/main/output_main.css
@@ -594,6 +594,30 @@ video {
   max-width: 40%;
 }
 
+.max-w-\[50\%\] {
+  max-width: 50%;
+}
+
+.max-w-\[60\%\] {
+  max-width: 60%;
+}
+
+.max-w-\[700px\] {
+  max-width: 700px;
+}
+
+.max-w-\[720px\] {
+  max-width: 720px;
+}
+
+.max-w-\[740px\] {
+  max-width: 740px;
+}
+
+.max-w-\[640px\] {
+  max-width: 640px;
+}
+
 .bg-black {
   --tw-bg-opacity: 1;
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
@@ -738,7 +762,7 @@ video {
   letter-spacing: 0.05em;
 }
 
-@media (max-width: 900px) {
+@media (max-width: 999px) {
   .para-cn {
     font-size: 1.125rem;
     line-height: 1.75rem;
@@ -752,7 +776,7 @@ video {
   line-height: 2.25rem;
 }
 
-@media (max-width: 900px) {
+@media (max-width: 999px) {
   .para-en {
     font-style: normal;
   }
@@ -765,7 +789,7 @@ video {
   line-height: 1.75rem;
 }
 
-@media (max-width: 900px) {
+@media (max-width: 999px) {
   .para-bottom {
     font-size: 1rem;
     line-height: 1.5rem;
@@ -774,7 +798,7 @@ video {
 
 .title {
   padding: 0.5rem;
-  padding-top: 150px;
+  padding-top: 100px;
   padding-bottom: 2.5rem;
   font-size: 3rem;
   line-height: 1;
@@ -782,7 +806,7 @@ video {
   letter-spacing: 0.025em;
 }
 
-@media (max-width: 900px) {
+@media (max-width: 999px) {
   .title {
     padding: 0.25rem;
     padding-top: 100px;
@@ -795,7 +819,7 @@ video {
   background-color: rgb(147 51 234 / var(--tw-bg-opacity));
 }
 
-@media (max-width: 900px) {
+@media (max-width: 999px) {
   .sm\:block {
     display: block;
   }
@@ -806,6 +830,10 @@ video {
 
   .sm\:w-\[200px\] {
     width: 200px;
+  }
+
+  .sm\:max-w-\[100\%\] {
+    max-width: 100%;
   }
 
   .sm\:max-w-none {
@@ -841,5 +869,11 @@ video {
 
   .sm\:leading-9 {
     line-height: 2.25rem;
+  }
+}
+
+@media (min-width: 1000px) and (max-width: 1200px) {
+  .md\:max-w-\[60\%\] {
+    max-width: 60%;
   }
 }
