--- a/hugo2/themes/mainroad/assets/css/style.css
+++ b/hugo2/themes/mainroad/assets/css/style.css
@@ -459,8 +459,8 @@ select {
 	width: 100%;
 	padding: 0;
 	font: inherit;
-	color: #fff;
-	background: #FF4500;
+	color: #000;
+	background: #f0f0f0;
 	border: 0;
 	outline: 0;
 }
@@ -620,7 +620,7 @@ button:not(:-moz-focusring):focus > .menu__btn-title {
 }
 
 .meta__icon {
-	margin-right: 5px;
+	/* margin-right: 5px; */
 	vertical-align: middle;
 	/* fill: #c4c4c4; */
 }
