--- a/main/output_main.css
+++ b/main/output_main.css
@@ -570,16 +570,76 @@ video {
   margin: auto;
 }
 
-.mb-\[2px\] {
-  margin-bottom: 2px;
-}
-
 .ml-\[100px\] {
   margin-left: 100px;
 }
 
 .mt-\[-2px\] {
   margin-top: -2px;
+}
+
+.ml-\[-5px\] {
+  margin-left: -5px;
+}
+
+.ml-\[-2px\] {
+  margin-left: -2px;
+}
+
+.ml-\[2px\] {
+  margin-left: 2px;
+}
+
+.ml-\[-10px\] {
+  margin-left: -10px;
+}
+
+.ml-\[-4px\] {
+  margin-left: -4px;
+}
+
+.mt-2 {
+  margin-top: 0.5rem;
+}
+
+.mt-1 {
+  margin-top: 0.25rem;
+}
+
+.mt-\[-6px\] {
+  margin-top: -6px;
+}
+
+.mr-\[5px\] {
+  margin-right: 5px;
+}
+
+.mr-\[-5px\] {
+  margin-right: -5px;
+}
+
+.mt-\[2px\] {
+  margin-top: 2px;
+}
+
+.mr-\[-2px\] {
+  margin-right: -2px;
+}
+
+.ml-\[-3px\] {
+  margin-left: -3px;
+}
+
+.mr-\[-3px\] {
+  margin-right: -3px;
+}
+
+.mr-\[-4px\] {
+  margin-right: -4px;
+}
+
+.mr-\[-8px\] {
+  margin-right: -8px;
 }
 
 .inline {
@@ -610,12 +670,36 @@ video {
   height: 100vh;
 }
 
+.h-\[300px\] {
+  height: 300px;
+}
+
+.h-\[800px\] {
+  height: 800px;
+}
+
+.h-\[600px\] {
+  height: 600px;
+}
+
+.h-\[500px\] {
+  height: 500px;
+}
+
+.h-\[550px\] {
+  height: 550px;
+}
+
 .w-5 {
   width: 1.25rem;
 }
 
 .w-\[300px\] {
   width: 300px;
+}
+
+.w-\[400px\] {
+  width: 400px;
 }
 
 .w-\[70px\] {
@@ -635,8 +719,28 @@ video {
   max-width: 720px;
 }
 
-.bg-\[orange-bg\.svg\] {
-  background-color: orange-bg.svg;
+.max-w-3xl {
+  max-width: 48rem;
+}
+
+.max-w-xl {
+  max-width: 36rem;
+}
+
+.max-w-lg {
+  max-width: 32rem;
+}
+
+.max-w-sm {
+  max-width: 24rem;
+}
+
+.max-w-\[200px\] {
+  max-width: 200px;
+}
+
+.max-w-\[300px\] {
+  max-width: 300px;
 }
 
 .bg-black {
@@ -652,10 +756,6 @@ video {
   background-image: linear-gradient(to top right, var(--tw-gradient-stops));
 }
 
-.bg-gradient-to-t {
-  background-image: linear-gradient(to top, var(--tw-gradient-stops));
-}
-
 .from-\[\#d94217\] {
   --tw-gradient-from: #d94217 var(--tw-gradient-from-position);
   --tw-gradient-to: rgb(217 66 23 / 0) var(--tw-gradient-to-position);
@@ -665,30 +765,6 @@ video {
 .from-white {
   --tw-gradient-from: #fff var(--tw-gradient-from-position);
   --tw-gradient-to: rgb(255 255 255 / 0) var(--tw-gradient-to-position);
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
-}
-
-.from-\[\#c6e6ff\] {
-  --tw-gradient-from: #c6e6ff var(--tw-gradient-from-position);
-  --tw-gradient-to: rgb(198 230 255 / 0) var(--tw-gradient-to-position);
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
-}
-
-.from-\[\#ecf7ff\] {
-  --tw-gradient-from: #ecf7ff var(--tw-gradient-from-position);
-  --tw-gradient-to: rgb(236 247 255 / 0) var(--tw-gradient-to-position);
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
-}
-
-.from-\[\#f5fbff\] {
-  --tw-gradient-from: #f5fbff var(--tw-gradient-from-position);
-  --tw-gradient-to: rgb(245 251 255 / 0) var(--tw-gradient-to-position);
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
-}
-
-.from-\[\#fcfeff\] {
-  --tw-gradient-from: #fcfeff var(--tw-gradient-from-position);
-  --tw-gradient-to: rgb(252 254 255 / 0) var(--tw-gradient-to-position);
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 
@@ -704,18 +780,6 @@ video {
 
 .to-\[\#861103\] {
   --tw-gradient-to: #861103 var(--tw-gradient-to-position);
-}
-
-.to-\[\#c6e6ff\] {
-  --tw-gradient-to: #c6e6ff var(--tw-gradient-to-position);
-}
-
-.to-\[\#cde9ff\] {
-  --tw-gradient-to: #cde9ff var(--tw-gradient-to-position);
-}
-
-.to-\[\#daefff\] {
-  --tw-gradient-to: #daefff var(--tw-gradient-to-position);
 }
 
 .to-\[\#def1ff\] {
@@ -770,8 +834,32 @@ video {
   padding-top: 300px;
 }
 
+.pl-\[-5px\] {
+  padding-left: -5px;
+}
+
+.pt-2 {
+  padding-top: 0.5rem;
+}
+
+.pt-\[-2p\] {
+  padding-top: -2p;
+}
+
+.pt-\[-2px\] {
+  padding-top: -2px;
+}
+
+.pt-\[-6px\] {
+  padding-top: -6px;
+}
+
 .text-center {
   text-align: center;
+}
+
+.text-right {
+  text-align: right;
 }
 
 .font-mono {
@@ -798,12 +886,25 @@ video {
   line-height: 1.5rem;
 }
 
+.text-sm {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+}
+
 .font-bold {
   font-weight: 700;
 }
 
 .leading-8 {
   line-height: 2rem;
+}
+
+.leading-10 {
+  line-height: 2.5rem;
+}
+
+.leading-9 {
+  line-height: 2.25rem;
 }
 
 .text-\[\#f0c5ad\] {
@@ -983,6 +1084,7 @@ video {
 }
 
 .bottom-link-social {
+  padding-right: 0.25rem;
   font-size: 1rem;
   line-height: 1.5rem;
   --tw-text-opacity: 1;
@@ -995,6 +1097,25 @@ video {
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.bottom-link-contact {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+  --tw-text-opacity: 1;
+  color: rgb(229 231 235 / var(--tw-text-opacity));
+  font-weight: 700;
+}
+
+.bottom-link-contact:hover {
+  --tw-drop-shadow: drop-shadow(0 0 6px rgba(255,255,255,0.5));
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.first-line\:leading-8::first-line {
+  line-height: 2rem;
 }
 
 .hover\:bg-purple-600:hover {
