--- a/main/input.css
+++ b/main/input.css
@@ -3,19 +3,19 @@
 @tailwind utilities;
 
 .contact-text{
-    @apply underline decoration-dashed hover:bg-purple-600 hover:text-white duration-300
+    @apply underline decoration-dashed hover:bg-purple-400 hover:text-white duration-300
 }
 .lang{
-    @apply text-purple-500 hover:bg-purple-600 hover:text-white duration-200
+    @apply text-purple-500 hover:bg-purple-400 hover:text-white duration-200
 }
 .link{
-    @apply text-purple-500 underline decoration-dotted hover:bg-purple-600 p-[1px]  hover:text-white duration-300;
+    @apply text-purple-500 underline decoration-dotted hover:bg-purple-500 p-[1px]  hover:text-white duration-300;
 }
 .link_sm{
     @apply underline decoration-dotted ;
 }
 .para-cn{
-    @apply p-2 text-2xl leading-9 sm:text-lg tracking-wider;
+    @apply p-2 text-2xl leading-9 sm:text-lg tracking-wider text-[#888];
 }
 .para-en{
     @apply p-2 text-xl leading-9 italic sm:not-italic;
@@ -24,7 +24,7 @@
     @apply p-1 pl-2 text-lg sm:text-base;
 }
 .title{
-    @apply pt-[70px] sm:pt-[60px] font-bold text-5xl p-2 sm:p-1 pb-10 sm:pb-10 tracking-wide text-[#0574e4]
+    @apply pt-[70px] sm:pt-[60px] font-bold text-5xl p-2 sm:p-1 pb-10 sm:pb-10 tracking-wide text-[rgb(5,116,228)]
 }
 .bottom-list div{
     @apply p-1 
@@ -43,4 +43,35 @@
 }
 .bottom-link-contact{
     @apply text-gray-200 bottom-link text-sm hover:text-white
+}
+table{
+    @apply border-collapse sm:text-sm
+}
+th{
+    @apply text-gray-400 p-2 w-20 sm:p-1
+}
+tr{
+    @apply h-10 pt-20 border-gray-200 border-b-[1px] last:border-none
+}
+td{
+    @apply text-[#888] text-center w-20 
+}
+.learned{
+    @apply mb-5 sm:mb-3 bg-gradient-to-tr from-[#f9fafb] border border-[#e5e7eb] rounded-xl h-16 w-[90%] m-auto hover:from-[#f9fafb] hover:to-[#f3f4f6] shadow-sm
+    /* @apply bg-[#f9fafb] border border-[#e5e7eb] rounded-xl h-16 w-[90%] m-auto */
+}
+/* .learned-img{ */
+    /* @apply  */
+/* } */
+.learned-right{
+    @apply float-left p-2 text-[#888] 
+}
+.learned-old{
+    @apply learned sm:hidden
+}
+.learned-title{
+    @apply font-bold text-sm pt-[5px]
+}
+.learned-info{
+    @apply text-xs
 }
