--- a/main/output_main.css
+++ b/main/output_main.css
@@ -566,72 +566,64 @@ video {
   margin: 2.5rem;
 }
 
+.m-2 {
+  margin: 0.5rem;
+}
+
 .m-auto {
   margin: auto;
 }
 
-.ml-\[100px\] {
-  margin-left: 100px;
+.mb-0 {
+  margin-bottom: 0px;
 }
 
-.mt-\[-2px\] {
-  margin-top: -2px;
+.mb-2 {
+  margin-bottom: 0.5rem;
 }
 
-.ml-\[-5px\] {
-  margin-left: -5px;
+.mb-20 {
+  margin-bottom: 5rem;
+}
+
+.mb-\[100px\] {
+  margin-bottom: 100px;
+}
+
+.ml-2 {
+  margin-left: 0.5rem;
+}
+
+.ml-3 {
+  margin-left: 0.75rem;
+}
+
+.ml-4 {
+  margin-left: 1rem;
 }
 
 .ml-\[-2px\] {
   margin-left: -2px;
 }
 
-.ml-\[2px\] {
-  margin-left: 2px;
-}
-
-.ml-\[-10px\] {
-  margin-left: -10px;
-}
-
 .ml-\[-4px\] {
   margin-left: -4px;
 }
 
-.mt-2 {
-  margin-top: 0.5rem;
+.ml-\[100px\] {
+  margin-left: 100px;
 }
 
-.mt-1 {
-  margin-top: 0.25rem;
+.ml-\[2px\] {
+  margin-left: 2px;
 }
 
-.mt-\[-6px\] {
-  margin-top: -6px;
-}
-
-.mr-\[5px\] {
-  margin-right: 5px;
-}
-
-.mr-\[-5px\] {
-  margin-right: -5px;
-}
-
-.mt-\[2px\] {
-  margin-top: 2px;
+.mr-4 {
+  margin-right: 1rem;
 }
 
 .mr-\[-2px\] {
   margin-right: -2px;
-}
-
-.ml-\[-3px\] {
-  margin-left: -3px;
-}
-
-.mr-\[-3px\] {
-  margin-right: -3px;
 }
 
 .mr-\[-4px\] {
@@ -642,12 +634,68 @@ video {
   margin-right: -8px;
 }
 
+.mr-\[5\%\] {
+  margin-right: 5%;
+}
+
+.mt-2 {
+  margin-top: 0.5rem;
+}
+
+.mt-3 {
+  margin-top: 0.75rem;
+}
+
+.mt-4 {
+  margin-top: 1rem;
+}
+
+.mt-5 {
+  margin-top: 1.25rem;
+}
+
+.mt-8 {
+  margin-top: 2rem;
+}
+
+.mt-\[-20px\] {
+  margin-top: -20px;
+}
+
+.mt-\[-2px\] {
+  margin-top: -2px;
+}
+
+.mt-\[-6px\] {
+  margin-top: -6px;
+}
+
+.mt-\[2px\] {
+  margin-top: 2px;
+}
+
 .inline {
   display: inline;
 }
 
+.flex {
+  display: flex;
+}
+
+.table {
+  display: table;
+}
+
 .hidden {
   display: none;
+}
+
+.h-40 {
+  height: 10rem;
+}
+
+.h-48 {
+  height: 12rem;
 }
 
 .h-5 {
@@ -658,52 +706,69 @@ video {
   height: 200px;
 }
 
+.h-\[250px\] {
+  height: 250px;
+}
+
 .h-\[80px\] {
   height: 80px;
+}
+
+.h-fit {
+  height: -moz-fit-content;
+  height: fit-content;
 }
 
 .h-full {
   height: 100%;
 }
 
+.h-px {
+  height: 1px;
+}
+
 .h-screen {
   height: 100vh;
 }
 
-.h-\[300px\] {
-  height: 300px;
+.min-h-\[150px\] {
+  min-height: 150px;
 }
 
-.h-\[800px\] {
-  height: 800px;
-}
-
-.h-\[600px\] {
-  height: 600px;
-}
-
-.h-\[500px\] {
-  height: 500px;
-}
-
-.h-\[550px\] {
-  height: 550px;
+.w-10 {
+  width: 2.5rem;
 }
 
 .w-5 {
   width: 1.25rem;
 }
 
+.w-8 {
+  width: 2rem;
+}
+
+.w-\[30\%\] {
+  width: 30%;
+}
+
 .w-\[300px\] {
   width: 300px;
 }
 
-.w-\[400px\] {
-  width: 400px;
+.w-\[50px\] {
+  width: 50px;
+}
+
+.w-\[60\%\] {
+  width: 60%;
 }
 
 .w-\[70px\] {
   width: 70px;
+}
+
+.w-\[95\%\] {
+  width: 95%;
 }
 
 .w-fit {
@@ -715,32 +780,79 @@ video {
   width: 100%;
 }
 
+.max-w-\[1024px\] {
+  max-width: 1024px;
+}
+
 .max-w-\[720px\] {
   max-width: 720px;
 }
 
-.max-w-3xl {
-  max-width: 48rem;
+.flex-1 {
+  flex: 1 1 0%;
 }
 
-.max-w-xl {
-  max-width: 36rem;
+.flex-none {
+  flex: none;
 }
 
-.max-w-lg {
-  max-width: 32rem;
+.table-auto {
+  table-layout: auto;
 }
 
-.max-w-sm {
-  max-width: 24rem;
+.grid-cols-4 {
+  grid-template-columns: repeat(4, minmax(0, 1fr));
 }
 
-.max-w-\[200px\] {
-  max-width: 200px;
+.flex-col {
+  flex-direction: column;
 }
 
-.max-w-\[300px\] {
-  max-width: 300px;
+.items-center {
+  align-items: center;
+}
+
+.items-stretch {
+  align-items: stretch;
+}
+
+.justify-center {
+  justify-content: center;
+}
+
+.gap-2 {
+  gap: 0.5rem;
+}
+
+.self-center {
+  align-self: center;
+}
+
+.overflow-hidden {
+  overflow: hidden;
+}
+
+.rounded-xl {
+  border-radius: 0.75rem;
+}
+
+.rounded-b-\[50\%\] {
+  border-bottom-right-radius: 50%;
+  border-bottom-left-radius: 50%;
+}
+
+.rounded-t-\[50\%\] {
+  border-top-left-radius: 50%;
+  border-top-right-radius: 50%;
+}
+
+.border {
+  border-width: 1px;
+}
+
+.border-gray-200 {
+  --tw-border-opacity: 1;
+  border-color: rgb(229 231 235 / var(--tw-border-opacity));
 }
 
 .bg-black {
@@ -748,8 +860,33 @@ video {
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
 
+.bg-gray-100 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(243 244 246 / var(--tw-bg-opacity));
+}
+
+.bg-opacity-50 {
+  --tw-bg-opacity: 0.5;
+}
+
+.bg-gradient-to-b {
+  background-image: linear-gradient(to bottom, var(--tw-gradient-stops));
+}
+
 .bg-gradient-to-br {
   background-image: linear-gradient(to bottom right, var(--tw-gradient-stops));
+}
+
+.bg-gradient-to-l {
+  background-image: linear-gradient(to left, var(--tw-gradient-stops));
+}
+
+.bg-gradient-to-r {
+  background-image: linear-gradient(to right, var(--tw-gradient-stops));
+}
+
+.bg-gradient-to-t {
+  background-image: linear-gradient(to top, var(--tw-gradient-stops));
 }
 
 .bg-gradient-to-tr {
@@ -759,6 +896,18 @@ video {
 .from-\[\#d94217\] {
   --tw-gradient-from: #d94217 var(--tw-gradient-from-position);
   --tw-gradient-to: rgb(217 66 23 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.from-gray-100 {
+  --tw-gradient-from: #f3f4f6 var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(243 244 246 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.from-gray-100\/60 {
+  --tw-gradient-from: rgb(243 244 246 / 0.6) var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(243 244 246 / 0) var(--tw-gradient-to-position);
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 
@@ -786,6 +935,10 @@ video {
   --tw-gradient-to: #def1ff var(--tw-gradient-to-position);
 }
 
+.to-white {
+  --tw-gradient-to: #fff var(--tw-gradient-to-position);
+}
+
 .p-10 {
   padding: 2.5rem;
 }
@@ -796,10 +949,6 @@ video {
 
 .p-5 {
   padding: 1.25rem;
-}
-
-.pb-\[200px\] {
-  padding-bottom: 200px;
 }
 
 .pl-1 {
@@ -814,8 +963,20 @@ video {
   padding-left: 50px;
 }
 
+.pt-16 {
+  padding-top: 4rem;
+}
+
 .pt-20 {
   padding-top: 5rem;
+}
+
+.pt-24 {
+  padding-top: 6rem;
+}
+
+.pt-5 {
+  padding-top: 1.25rem;
 }
 
 .pt-6 {
@@ -834,26 +995,6 @@ video {
   padding-top: 300px;
 }
 
-.pl-\[-5px\] {
-  padding-left: -5px;
-}
-
-.pt-2 {
-  padding-top: 0.5rem;
-}
-
-.pt-\[-2p\] {
-  padding-top: -2p;
-}
-
-.pt-\[-2px\] {
-  padding-top: -2px;
-}
-
-.pt-\[-6px\] {
-  padding-top: -6px;
-}
-
 .text-center {
   text-align: center;
 }
@@ -864,6 +1005,11 @@ video {
 
 .font-mono {
   font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+}
+
+.text-2xl {
+  font-size: 1.5rem;
+  line-height: 2rem;
 }
 
 .text-3xl {
@@ -886,9 +1032,19 @@ video {
   line-height: 1.5rem;
 }
 
+.text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+}
+
 .text-sm {
   font-size: 0.875rem;
   line-height: 1.25rem;
+}
+
+.text-xl {
+  font-size: 1.25rem;
+  line-height: 1.75rem;
 }
 
 .font-bold {
@@ -899,12 +1055,13 @@ video {
   line-height: 2rem;
 }
 
-.leading-10 {
-  line-height: 2.5rem;
-}
-
 .leading-9 {
   line-height: 2.25rem;
+}
+
+.text-\[\#888\] {
+  --tw-text-opacity: 1;
+  color: rgb(136 136 136 / var(--tw-text-opacity));
 }
 
 .text-\[\#f0c5ad\] {
@@ -927,9 +1084,25 @@ video {
   color: rgb(156 163 175 / var(--tw-text-opacity));
 }
 
+.text-gray-900 {
+  --tw-text-opacity: 1;
+  color: rgb(17 24 39 / var(--tw-text-opacity));
+}
+
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.shadow-sm {
+  --tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
+  --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.drop-shadow-\[0_0_6px_rgba\(5\2c 116\2c 228\2c 0\.2\)\] {
+  --tw-drop-shadow: drop-shadow(0 0 6px rgba(5,116,228,0.2));
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
 .duration-300 {
@@ -944,7 +1117,7 @@ video {
 
 .contact-text:hover {
   --tw-bg-opacity: 1;
-  background-color: rgb(147 51 234 / var(--tw-bg-opacity));
+  background-color: rgb(192 132 252 / var(--tw-bg-opacity));
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
@@ -957,7 +1130,7 @@ video {
 
 .lang:hover {
   --tw-bg-opacity: 1;
-  background-color: rgb(147 51 234 / var(--tw-bg-opacity));
+  background-color: rgb(192 132 252 / var(--tw-bg-opacity));
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
@@ -973,7 +1146,7 @@ video {
 
 .link:hover {
   --tw-bg-opacity: 1;
-  background-color: rgb(147 51 234 / var(--tw-bg-opacity));
+  background-color: rgb(168 85 247 / var(--tw-bg-opacity));
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
@@ -988,6 +1161,8 @@ video {
   font-size: 1.5rem;
   line-height: 2.25rem;
   letter-spacing: 0.05em;
+  --tw-text-opacity: 1;
+  color: rgb(136 136 136 / var(--tw-text-opacity));
 }
 
 @media (max-width: 999px) {
@@ -1114,8 +1289,135 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.first-line\:leading-8::first-line {
-  line-height: 2rem;
+table {
+  border-collapse: collapse;
+}
+
+@media (max-width: 999px) {
+  table {
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+  }
+}
+
+th {
+  width: 5rem;
+  padding: 0.5rem;
+  --tw-text-opacity: 1;
+  color: rgb(156 163 175 / var(--tw-text-opacity));
+}
+
+@media (max-width: 999px) {
+  th {
+    padding: 0.25rem;
+  }
+}
+
+tr {
+  height: 2.5rem;
+  border-bottom-width: 1px;
+  --tw-border-opacity: 1;
+  border-color: rgb(229 231 235 / var(--tw-border-opacity));
+  padding-top: 5rem;
+}
+
+tr:last-child {
+  border-style: none;
+}
+
+td {
+  width: 5rem;
+  text-align: center;
+  --tw-text-opacity: 1;
+  color: rgb(136 136 136 / var(--tw-text-opacity));
+}
+
+.learned {
+  margin: auto;
+  margin-bottom: 1.25rem;
+  height: 4rem;
+  width: 90%;
+  border-radius: 0.75rem;
+  border-width: 1px;
+  --tw-border-opacity: 1;
+  border-color: rgb(229 231 235 / var(--tw-border-opacity));
+  background-image: linear-gradient(to top right, var(--tw-gradient-stops));
+  --tw-gradient-from: #f9fafb var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(249 250 251 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+  --tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
+  --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.learned:hover {
+  --tw-gradient-from: #f9fafb var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(249 250 251 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+  --tw-gradient-to: #f3f4f6 var(--tw-gradient-to-position);
+}
+
+@media (max-width: 999px) {
+  .learned {
+    margin-bottom: 0.75rem;
+  }
+}
+
+/* .learned-img{ */
+
+/* @apply  */
+
+/* } */
+
+.learned-right {
+  float: left;
+  padding: 0.5rem;
+  --tw-text-opacity: 1;
+  color: rgb(136 136 136 / var(--tw-text-opacity));
+}
+
+.learned-old {
+  margin: auto;
+  margin-bottom: 1.25rem;
+  height: 4rem;
+  width: 90%;
+  border-radius: 0.75rem;
+  border-width: 1px;
+  --tw-border-opacity: 1;
+  border-color: rgb(229 231 235 / var(--tw-border-opacity));
+  background-image: linear-gradient(to top right, var(--tw-gradient-stops));
+  --tw-gradient-from: #f9fafb var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(249 250 251 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+  --tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
+  --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.learned-old:hover {
+  --tw-gradient-from: #f9fafb var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(249 250 251 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+  --tw-gradient-to: #f3f4f6 var(--tw-gradient-to-position);
+}
+
+@media (max-width: 999px) {
+  .learned-old {
+    margin-bottom: 0.75rem;
+    display: none;
+  }
+}
+
+.learned-title {
+  padding-top: 5px;
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+  font-weight: 700;
+}
+
+.learned-info {
+  font-size: 0.75rem;
+  line-height: 1rem;
 }
 
 .hover\:bg-purple-600:hover {
@@ -1128,8 +1430,32 @@ video {
     float: none;
   }
 
+  .sm\:m-auto {
+    margin: auto;
+  }
+
+  .sm\:mb-4 {
+    margin-bottom: 1rem;
+  }
+
+  .sm\:mr-4 {
+    margin-right: 1rem;
+  }
+
   .sm\:block {
     display: block;
+  }
+
+  .sm\:inline {
+    display: inline;
+  }
+
+  .sm\:hidden {
+    display: none;
+  }
+
+  .sm\:h-\[300px\] {
+    height: 300px;
   }
 
   .sm\:h-fit {
@@ -1137,8 +1463,20 @@ video {
     height: fit-content;
   }
 
+  .sm\:w-\[20\%\] {
+    width: 20%;
+  }
+
+  .sm\:w-\[75\%\] {
+    width: 75%;
+  }
+
   .sm\:max-w-\[100\%\] {
     max-width: 100%;
+  }
+
+  .sm\:grid-cols-none {
+    grid-template-columns: none;
   }
 
   .sm\:to-\[\#e4f4ff\] {
@@ -1177,6 +1515,10 @@ video {
     text-align: left;
   }
 
+  .sm\:text-center {
+    text-align: center;
+  }
+
   .sm\:text-2xl {
     font-size: 1.5rem;
     line-height: 2rem;
@@ -1198,5 +1540,49 @@ video {
 
   .sm\:leading-9 {
     line-height: 2.25rem;
+  }
+}
+
+@media (min-width: 1000px) and (max-width: 1200px) {
+  .md\:grid {
+    display: grid;
+  }
+}
+
+@media (min-width: 1200px) and (max-width: 1279px) {
+  .lg\:grid {
+    display: grid;
+  }
+}
+
+@media (min-width: 1280px) and (max-width: 1600px) {
+  .xl\:grid {
+    display: grid;
+  }
+}
+
+@media (min-width: 1600px) and (max-width: 2240px) {
+  .\32xl\:mb-32 {
+    margin-bottom: 8rem;
+  }
+
+  .\32xl\:grid {
+    display: grid;
+  }
+
+  .\32xl\:text-4xl {
+    font-size: 2.25rem;
+    line-height: 2.5rem;
+  }
+
+  .\32xl\:text-xl {
+    font-size: 1.25rem;
+    line-height: 1.75rem;
+  }
+}
+
+@media (min-width: 2240px) {
+  .\33xl\:grid {
+    display: grid;
   }
 }
